# m4version

./: .gitignore  LICENSE  README.md  STORIES.md  m4version.cabal  package.yaml  stack.yaml
src/: Lib.hs  setup_m4_version.hs
