name:                m4version
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/agander/m4version#readme
license:             BSD3
license-file:        LICENSE
author:              Giles Anderson
maintainer:          agander@gmail.com
copyright:           2017 Giles Anderson
category:            Student
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agander/m4version
