name:                m4version
version:             0.0.2
-- synopsis:
-- description:
homepage:            https://github.com/agander/m4version#readme
license:             BSD3
license-file:        LICENSE
author:              Giles Anderson
maintainer:          agander@gmail.com
copyright:           2017 Giles Anderson
category:            Student
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agander/m4version

executable setup_m4_version
  hs-source-dirs:      src
  main-is:             setup_m4_version.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     --, dtmpl
                     , directory >= 1.3.0.0 
                     , split >= 0.2.3
                     , filepath >= 1.4.1
                     --, regex >= 0.0.5
                     --, regex-pcre >= 0.0.5
                     , bytestring
                     , text
                     --, megaparsec
                     --, cassava >= 0.4.5.0
  default-language:    Haskell2010

